--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,6 +1,5 @@
 analyzer:
   exclude:
-    - lib/basic_api/generated/api.dart
 
   strong-mode:
     implicit-dynamic: false
@@ -41,9 +40,7 @@ linter:
     - avoid_setters_without_getters
     - avoid_shadowing_type_parameters
     - avoid_single_cascade_in_expression_statements
-    - avoid_slow_async_io
     - avoid_types_as_parameter_names
-    # - avoid_types_on_closure_parameters
     - avoid_unnecessary_containers
     - avoid_unused_constructor_parameters
     - avoid_void_async
@@ -52,15 +49,13 @@ linter:
     - cancel_subscriptions
     - cascade_invocations
     - close_sinks
-    # - comment_references
     - constant_identifier_names
     - control_flow_in_finally
     - curly_braces_in_flow_control_structures
-    # - directives_ordering
     - empty_catches
     - empty_constructor_bodies
     - empty_statements
-    # - exhaustive_cases # required SDK 2.9.0
+    - exhaustive_cases
     - file_names
     - flutter_style_todos
     - hash_and_equals
@@ -69,7 +64,6 @@ linter:
     - join_return_with_assignment
     - library_names
     - library_prefixes
-    # - lines_longer_than_80_chars
     - list_remove_unrelated_type
     - no_adjacent_strings_in_list
     - no_duplicate_case_values
@@ -92,7 +86,7 @@ linter:
     - prefer_constructors_over_static_methods
     - prefer_contains
     - prefer_equal_for_default_values
-    - prefer_expression_function_bodies # https://github.com/flutter/flutter/wiki/Style-guide-for-Flutter-repo#consider-using--for-short-functions-and-methods
+    - prefer_expression_function_bodies
     - prefer_final_fields
     - prefer_final_in_for_each
     - prefer_final_locals
@@ -109,11 +103,9 @@ linter:
     - prefer_single_quotes
     - prefer_typing_uninitialized_variables
     - prefer_void_to_null
-    # - public_member_api_docs
     - recursive_getters
     - slash_for_doc_comments
     - sort_constructors_first
-    # - sort_pub_dependencies
     - sort_unnamed_constructors_first
     - test_types_in_equals
     - throw_in_finally
